[gd_scene load_steps=7 format=3 uid="uid://dqa5rj5fdkfk"]

[ext_resource type="Script" path="res://scripts/gui.gd" id="1_58a43"]
[ext_resource type="Theme" uid="uid://cntyse6878fqc" path="res://styles/theme_gui.theme" id="2_adsji"]
[ext_resource type="FontFile" uid="uid://dbw5l7tiy4h3i" path="res://styles/NokiaCellphoneFC.ttf" id="3_w28qn"]
[ext_resource type="Texture2D" uid="uid://cvwgxwwlfco0v" path="res://assets/spritesheets/PNG/collectibles_life1.png" id="4_18g10"]
[ext_resource type="Texture2D" uid="uid://bvqha5vrnmbld" path="res://assets/spritesheets/PNG/collectibles_coin_gold_1.png" id="4_lgyn5"]
[ext_resource type="Texture2D" uid="uid://3ntlu3474j7h" path="res://assets/spritesheets/PNG/pngwing.com.png" id="5_au5l3"]

[node name="gui" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_58a43")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="lives_icon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_18g10")

[node name="lives" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("3_w28qn")
text = "X0
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="coins_icon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("4_lgyn5")

[node name="coins" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("3_w28qn")
text = "X0
"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="enemy_icon" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("5_au5l3")

[node name="enemies" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("3_w28qn")
text = "X0
"

[node name="GameOver" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(1, 0, 0, 0.705882)

[node name="Container" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -29.0
offset_right = 179.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOver/Container"]
layout_mode = 2
theme = ExtResource("2_adsji")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_w28qn")
theme_override_font_sizes/font_size = 72
text = "HAS MUERTO"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="GameOver/Container"]
layout_mode = 2
theme_override_constants/separation = 46

[node name="Restart" type="Button" parent="GameOver/Container/Buttons"]
layout_mode = 2
theme = ExtResource("2_adsji")
theme_override_font_sizes/font_size = 18
text = "VOLVER A INTENTAR NIVEL"

[node name="Quit" type="Button" parent="GameOver/Container/Buttons"]
layout_mode = 2
theme = ExtResource("2_adsji")
theme_override_font_sizes/font_size = 18
text = "SALIR DEL JUEGO"

[node name="Sound" type="AudioStreamPlayer2D" parent="GameOver"]

[connection signal="pressed" from="GameOver/Container/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/Container/Buttons/Quit" to="." method="_on_quit_pressed"]
